[metadata]
name = kneeliverse
version = 1.0
author = Mário Antunes
author_email = mario.antunes@ua.pt
description = Kneeliverse: A Universal Knee/ElbowDetection Library for Performance Curves
long_description = file: README.md, LICENSE, COPYRIGHT
long_description_content_type = text/markdown
url = https://github.com/mariolpantunes/knee
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.23
    pyUTSAlgorithms>=0.1.2

[options.packages.find]
where = src